--- a/src/main/resources/templates/member/signIn.html
+++ b/src/main/resources/templates/member/signIn.html
@@ -13,5 +13,16 @@
     <input type="password" name="password" />
     <button>로그인</button>
 </form>
+<script th:inline="javascript">
+    /* <![CDATA[ */
+    const message = [[ ${message} ]];
+    /* ]]> */
+    if (message) {
+        alert(message);
+    }
+
+
+
+</script>
 </body>
 </html>
